<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/white">

    <!-- Seção do menu com vermelho mais forte -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#990909"
        android:padding="6dp"
        android:gravity="center">

        <!-- Logo/Nome da Hamburgueria -->
        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="205dp"
            android:layout_height="52dp"
            android:src="@drawable/logo_kiero"/>

        <!-- Barra Superior com itens de navegação -->
        <LinearLayout
            android:id="@+id/barraSuperior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <!-- Home -->
            <TextView
                android:id="@+id/tvHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_home"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:padding="8dp"/>

            <!-- Pedidos -->
            <TextView
                android:id="@+id/tvPedidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_pedidos"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:padding="8dp"/>

            <!-- Peça aqui -->
            <TextView
                android:id="@+id/tvPecaaqui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_peca_aqui"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:padding="8dp"/>

        </LinearLayout>

        <!-- Botão de Login -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/botao_cor"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>

    <!-- Conteúdo principal com ScrollView para rolagem -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@drawable/backgroundwhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Título da seção -->
            <TextView
                android:id="@+id/tvHamburguerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hamburguers"
                android:textSize="24sp"
                android:textColor="#794246"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:padding="16dp"
                android:layout_marginBottom="25dp"/>

            <!-- Card de Produto 1 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:background="#B31315"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="144dp"
                        android:layout_height="135dp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/hamburguer" />

                    <TextView
                        android:id="@+id/tvHamburguerName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hamburguertipo1"
                        android:textSize="18sp"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp" />

                    <TextView
                        android:id="@+id/tvHamburguerDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Um hamburguer irresistivel, feito com um blend especial de carne bovina Angus, bacon crocante, queijo gouda derretido, cebola roxa, alface e uma deliciosa maionese de ervas, tudo servido em um pão de brioche artesanal"
                        android:textColor="@android:color/white"
                        android:layout_marginTop="24dp"
                        android:justificationMode="inter_word"
                        android:lineSpacingExtra="2dp" />

                    <TextView
                        android:id="@+id/tvHamburguerPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Preço: R$ 25,00"
                        android:textColor="@android:color/white"
                        android:layout_marginTop="24dp" />

                    <Button
                        android:id="@+id/btnAddToCart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Adicionar ao Carrinho"
                        android:layout_marginTop="8dp"
                        android:layout_gravity="center"
                        android:textColor="@android:color/white"
                        android:backgroundTint="#762323"
                        android:textStyle="bold"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <!-- Card de Produto 2 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:background="#B31315"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="144dp"
                        android:layout_height="135dp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/hamburguer" />

                    <TextView
                        android:id="@+id/tvHamburguerName2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hamburguertipo2"
                        android:textSize="18sp"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp" />

                    <TextView
                        android:id="@+id/tvHamburguerDesc2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Um hamburguer irresistivel, feito com um blend especial de carne bovina Angus, bacon crocante, queijo gouda derretido, cebola roxa, alface e uma deliciosa maionese de ervas, tudo servido em um pão de brioche artesanal"
                        android:textColor="@android:color/white"
                        android:layout_marginTop="24dp"
                        android:justificationMode="inter_word"
                        android:lineSpacingExtra="2dp" />

                    <TextView
                        android:id="@+id/tvHamburguerPrice2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Preço: R$ 34,00"
                        android:textColor="@android:color/white"
                        android:layout_marginTop="24dp" />

                    <Button
                        android:id="@+id/btnAddToCart2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Adicionar ao Carrinho"
                        android:layout_marginTop="8dp"
                        android:layout_gravity="center"
                        android:textColor="@android:color/white"
                        android:backgroundTint="#762323"
                        android:textStyle="bold"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <!-- Carrinho de Compras -->
            <TextView
                android:id="@+id/tv_carrinho_compras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Carrinho de Compras"
                android:textColor="#9B1C1C"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp"/>

            <TextView
                android:id="@+id/tv_preco_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Preço Total: R$ 0.00"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/btn_finalizar_compra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Finalizar Compra"
                android:layout_marginTop="16dp"
                android:backgroundTint="#762323"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
